@@ -5,16 +5,16 @@ plugins {
     id 'java'
     id 'idea'
     id 'project-report'
-    id 'org.springframework.boot' version '2.3.0.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.springframework.boot' version '2.3.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
 group = 'org.gty'
-version = '1.1.0.RELEASE'
+version = '1.1.1.RELEASE'
 description = 'Spring Boot Reactive Demo'
 
-java.sourceCompatibility = JavaVersion.VERSION_14
-java.targetCompatibility = JavaVersion.VERSION_14
+java.sourceCompatibility = JavaVersion.VERSION_15
+java.targetCompatibility = JavaVersion.VERSION_15
 [compileJava, compileTestJava]*.options*.encoding = "${StandardCharsets.UTF_8}"
 javadoc.options.encoding = "${StandardCharsets.UTF_8}"
 
@@ -29,9 +29,12 @@ configurations {
     compileOnly { extendsFrom annotationProcessor }
 }
 
+// bootRun --args='--spring.profiles.active=dev'
 bootRun {
-    def activeProfile = 'spring.profiles.active'
-    systemProperties[activeProfile] = project.gradle.startParameter.systemPropertiesArgs[activeProfile]
+    jvmArgs = [
+//          "-XX:+UseZGC",
+            "-XX:+UseShenandoahGC"
+    ]
 }
 
 bootJar {
@@ -56,8 +59,11 @@ bootJar {
     }
 }
 
+// docker run -e "JDK_JAVA_OPTIONS=" -e "LOG_TEMP=" -e "SPRING_PROFILES_ACTIVE=" -p 8080:8080
 bootBuildImage {
-    environment = ["BP_JVM_VERSION" : "14"]
+    environment = [
+            "BP_JVM_VERSION" : "15"
+    ]
 }
 
 dependencies {
@@ -91,33 +97,47 @@ dependencies {
 //  annotationProcessor 'org.projectlombok:lombok'
 
 //  implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'
-    implementation 'org.springframework.session:spring-session-data-redis:2.3.0.RELEASE'
-    implementation 'org.springframework.kafka:spring-kafka:2.5.1.RELEASE'
+    implementation 'org.springframework.session:spring-session-data-redis:2.3.1.RELEASE'
+    implementation 'org.springframework.kafka:spring-kafka:2.6.2'
 //  implementation 'org.springframework.security:spring-security-ldap:5.1.6.RELEASE'
 
-    implementation 'org.flywaydb:flyway-core:6.4.3'
-    implementation 'org.postgresql:postgresql:42.2.13'
+    implementation 'org.flywaydb:flyway-core:6.5.7'
+    implementation 'org.postgresql:postgresql:42.2.17'
     implementation 'com.lmax:disruptor:3.4.2'
 //  implementation 'io.jsonwebtoken:jjwt:0.9.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.11.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.11.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.11.2'
+    implementation'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.2'
     implementation 'com.zaxxer:HikariCP:3.4.5'
-    implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.google.guava:guava:30.0-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.ibm.icu:icu4j:67.1'
 
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
-    implementation 'commons-codec:commons-codec:1.14'
+    implementation 'commons-codec:commons-codec:1.15'
     implementation 'commons-fileupload:commons-fileupload:1.4'
-    implementation 'commons-io:commons-io:2.7'
-    implementation 'org.apache.commons:commons-lang3:3.10'
-    implementation 'org.apache.commons:commons-text:1.8'
+    implementation 'commons-io:commons-io:2.8.0'
+    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'org.apache.commons:commons-text:1.9'
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.apache.commons:commons-compress:1.20'
-    implementation 'org.apache.commons:commons-pool2:2.8.0'
+    implementation 'org.apache.commons:commons-pool2:2.9.0'
+
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+    implementation 'io.github.openfeign:feign-core:11.0'
+    implementation 'io.github.openfeign:feign-slf4j:11.0'
+    implementation 'io.github.openfeign:feign-jackson:11.0'
+    implementation 'io.github.openfeign:feign-gson:11.0'
+    implementation 'io.github.openfeign:feign-reactive-wrappers:11.0'
+    implementation 'io.github.openfeign:feign-java11:10.11'
+    implementation 'io.github.openfeign:feign-okhttp:11.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
 //  implementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
 //  implementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
@@ -134,21 +154,13 @@ dependencies {
     testImplementation 'org.springframework.kafka:spring-kafka-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.powermock:powermock-module-junit4:2.0.7'
-    testImplementation 'org.powermock:powermock-api-mockito2:2.0.7'
+    testImplementation 'io.github.openfeign:feign-mock:11.0'
 //  testRuntimeOnly 'com.h2database:h2:1.4.196'
 }
 
 clean.doLast {
     project.delete "$projectDir${FileSystems.default.separator}out${FileSystems.default.separator}"
 }
-
-// for Java 12 and 13 features
-//tasks.withType(JavaCompile).each {
-//    it.options.compilerArgs.add('--enable-preview')
-//}
-//
-//bootRun.jvmArgs(['--enable-preview'])
 
 task buildApp {
     dependsOn clean
